@@ -61,4 +61,4 @@ AudioSample *AudioSample::createAudioSample(uint8 *data, uint32 size)
 	return 0;
 }
 
-};
+}
